# doguda

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test_priority.py
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: build.yaml
dogu/: app.py  loader.py  runner.py
dogu_app/: __init__.py  urls.py
src/dogu/: __init__.py  app.py  loader.py  runner.py  types.py
src/dogu_app/: ping.py  test_ping.py  urls.py
src/dogu_app/crawl/: url_to_text.py
src/doguda/: __main__.py  app.py
